--- a/css/styles.css
+++ b/css/styles.css
@@ -241,11 +241,316 @@ form{
 }
 
 
+/* BLOC HORIZONTAL DE 6 CARDS */
+
+.container{
+    width: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    padding: 0 50px; 
+    display:flex;
+
+}
+
+.bloc_h{
+    background-color: #F2F2F2;
+    border: 2px solid #F2F2F2;
+    border-radius: 15px;
+    padding: 40px 0px 40px 30px;
+    width: 70%;
+    
+    
+}
+
+.bloc_h h2{
+    font-size: 18px;
+}
+
+.cards_h{
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.card_h{
+    background-color: #fff;
+    padding: 4px ;
+    border-radius: 15px;
+    width: calc( ( 100% - 90px ) / 3 );
+    box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.6);
+    margin: 0px 30px 30px 0px;
+    
+}
+
+.bloc_h img{
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px; 
+    width: 100%;
+    height: 130px;
+    object-fit: cover;
+}
+
+.description_h{
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    width: 250px;
+    padding-top: 0px;
+    padding-left: 10px;
+}
+
+.description_h h3{
+    margin: 0px;
+}
+
+.description_h p{
+    margin: 5px 0px;
+}
+
+.star3{
+    color: #0065FC;
+}
+
+.star3 i:nth-child(4),
+.star3 i:nth-child(5)
+{
+    color: #ddd;
+}
+
+.star4{
+    color:#0065FC;
+}
+
+.star4 i:last-child {
+color: #ddd;
+}
+
+.star5{
+    color:#0065FC;
+}
+
+
+/* BLOC VERTICAL DE 3 CARDS */
+
+
+.bloc_v{
+    background-color: #F2F2F2;
+    border: 2px solid #F2F2F2;
+    border-radius: 15px; 
+    padding: 40px 30px 40px 30px;
+    margin-left: 30px;
+    width: 30%;
+}
+
+.card_v{
+    background-color: #fff;
+    padding: 4px ;
+    border-radius: 15px;
+    box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.6);
+    margin: 0px 30px 30px 0px;
+    height: 150px;
+    width: 100%;
+    display: flex;
+
+
+}
+
+
+.bloc_v img{
+    width: 130px;
+    height: 140px;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    object-fit: cover;
+}
+
+
+.description_v{
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px; 
+    width: 250px;
+    padding-top: 0px;
+    padding-left: 20px;
+
+}
+
+.description_v p{
+    margin: 5px 0px 45px 0px;
+    
+}
+
+.description_v h3{
+    margin: 5px 0px 0px 0px;
+}
 
 
 
+h4{
+    margin-top: 10px;
+}
 
 
+
+.titre_icone{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+/*                              Bloc   3 */
+
+.blocs{
+    width: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    padding: 0 50px; 
+    display: flex;
+}
+
+.bloc3{
+    display: flex;
+    flex-direction: column;
+}
+
+
+.cardz{
+    box-shadow: 0px 5px 0px -5px rgba(0,0,0,0.6);
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 40px;
+}
+
+
+
+.cardi{
+    background-color: #fff;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px; 
+    height: 400px;
+    width: 300px;
+    display: flex;
+    object-fit: cover;
+}
+
+.bloc3 p{
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.6);
+    height: 40px;
+    width: 300px;
+    margin-top: 0px;
+    padding-left: 10px;
+    display: flex;
+    align-items: center; 
+}
+
+.marseille{
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1440px;
+    padding: 0px 50px;
+    margin-bottom: 20px;
+    
+}
+
+
+
+.cardi2{
+    background-color: #fff;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px; 
+    height: 200px;
+    width: 300px;
+    display: flex;
+    object-fit: cover;
+}
+
+.text2{
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.6);
+    height: 40px;
+    width: 300px;
+    margin-top: 0px;
+    padding-left: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.cardi3{
+    background-color: #fff;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px; 
+    height: 120px;
+    width: 300px;
+    display: flex;
+    margin-top: 24px;
+    object-fit: cover;
+}
+
+
+.text3{
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.6);
+    height: 40px;
+    width: 300px;
+    margin-top: 0px;
+    padding-left: 10px;
+    display: flex;
+    align-items: center;
+}
+
+
+.cardi4{
+    background-color: #fff;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px; 
+    height: 400px;
+    width: 300px;
+    display: flex;
+    object-fit: cover;
+}
+
+.text4{
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.6);
+    height: 40px;
+    width: 300px;
+    margin-top: 0px;
+    padding-left: 10px;
+    display: flex;
+    align-items: center; 
+}
+
+.cardi5{
+    background-color: #fff;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px; 
+    height: 160px;
+    width: 300px;
+    display: flex;
+    object-fit: cover;
+}
+
+.text5{
+    margin-bottom: 40px;
+}
+
+.cardi6{
+    background-color: #fff;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px; 
+    height: 160px;
+    width: 300px;
+    display: flex;
+    object-fit: cover;
+}
 
 
 
