--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,20 @@
+/* fonts raleway */
+@font-face {
+    font-family: raleway;
+    src: url(../fonts/Raleway-Bold.ttf) format('truetype');
+    font-display: swap;
+    font-style: normal;
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: raleway;
+    src: url(../fonts/Raleway-Regular.ttf) format('truetype');
+    font-display: swap;
+    font-style: normal;
+    font-weight: 400;
+}
+
 /* MINI RESET */
 
 *,
@@ -19,7 +36,7 @@ body {
 	font-weight: 400;
 	font-size: 16px;
 	line-height: 22px;
-	font-family: 'Raleway', Arial, sans-serif;
+	font-family: raleway, Arial, sans-serif;
     margin : 0;
 	padding: 0;
 }
@@ -86,9 +103,6 @@ nav{
                                                                 font-weight: 700;
                                                             }
 
-                                                                .menu_mobile{
-                                                                    display: none;
-                                                                }
 
 /* BODY */
 
@@ -160,6 +174,8 @@ form{
             font-weight: 700;
             display: flex;
             align-items: center;
+            font-size: 18px;
+            margin: 0;
         }
 
 .icone{
@@ -384,6 +400,7 @@ h4{
 
 .marseille{
     margin-bottom: 20px;
+    display: block;
 }
 
 .blocs {
