--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,11 @@ form{
      border: 2px solid#F2F2F2;
      color: #fff;
      font-weight: 700;
+     cursor: pointer;
+}
+
+.bouton a:focus{
+    background-color: #0065FC;
 }
 
 .bouton i{
@@ -578,21 +583,20 @@ footer{
     main{
         padding: 0 20px 0 20px
     }
-
-        header{
+         header{
             position: relative;
-        }
+        } 
 
             nav{
                 margin-top: 100px;
                 margin-bottom: 20px;
                 margin-right: 0;
                 width: 100%;
-            } 
+            }  
 
-                header nav ul{
+                 header nav ul{
                     width: 100%;
-                }
+                } 
 
                     header nav ul li :first-child{
                         width: 50%;
@@ -612,7 +616,7 @@ footer{
                         position: absolute;
                         top: 35px;
                         right: -20px;
-                    }
+                    } 
 
     .bouton{
         border-radius: 10px;
